<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.rstyle.maxmoto1702</groupId>
    <artifactId>study-java-for-web-develepment</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Learn Java for Web Developer</name>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>

        <jetty.version>9.1.3.v20140225</jetty.version>
        <jetty.host>localhost</jetty.host>
        <jetty.port>9998</jetty.port>

        <junit.version>4.12</junit.version>

        <javaee.version>7.0</javaee.version>
        <jstl.version>1.2</jstl.version>
        <taglib.vesion>1.1.2</taglib.vesion>
        <struts.version>2.3.20</struts.version>
        
        <springframework.version>4.1.0.RELEASE</springframework.version>

        <mssql.jdbc.version>4.1</mssql.jdbc.version>
        <yandex.property.version>1.6</yandex.property.version>
    </properties>

    <modules>
        <module>ch1-book</module>
        <module>ch2-bookweb</module>
        <module>ch3-practic</module>
        <module>ch4-struts</module>
        <module>ch5-spring</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <!--Compiler-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>
                <!--Jetty-->
                <plugin>
                    <groupId>org.eclipse.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>${jetty.version}</version>
                    <configuration>
                        <scanIntervalSeconds>0</scanIntervalSeconds>
                        <webApp>
                            <contextPath>/</contextPath>
                        </webApp>
                        <stopPort>9847</stopPort>
                        <stopKey>tms-local</stopKey>
                        <jvmArgs>
                            -Xmx1024m
                            -XX:MaxPermSize=512m
                        </jvmArgs>
                        <goal>run-forked</goal>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <!--Java Servlet API-->
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>${javaee.version}</version>
        </dependency>
        <!--JSTL-->
        <dependency>
            <groupId>jstl</groupId>
            <artifactId>jstl</artifactId>
            <version>${jstl.version}</version>
        </dependency>
        <dependency>
            <groupId>taglibs</groupId>
            <artifactId>standard</artifactId>
            <version>${taglib.vesion}</version>
        </dependency>
        <!--JUnit-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <!--Logger-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.7</version>
        </dependency>
    </dependencies>
</project>